--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,17 @@ body {
 }
 
 .carousel-image-1 {
-  background: url('../img/image1.jpg');
+  background: url('../img/slider2.0.jpg');
   background-size: cover;
 }
 
 .carousel-image-2 {
-  background: url('../img/image2.jpg');
+  background: url('../img/slider3.0.jpg');
   background-size: cover;
 }
 
 .carousel-image-3 {
-  background: url('../img/image3.jpg');
+  background: url('../img/image1.jpg');
   background-size: cover;
 }
 
