--- a/css/style.css
+++ b/css/style.css
@@ -51,16 +51,21 @@ body {
   background: rgba(0, 0, 0, 0.7);
 }
 
+
 #video-play {
   position: relative;
   min-height: 200px;
-  background: url('../img/media.jpg');
+  background: url('../img/lights.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
+  
   background-position: 0 -300px;
+  
   text-align: center;
   color: #fff;
+
 }
+
 
 #video-play a {
   color: #fff;
