--- a/css/style.css
+++ b/css/style.css
@@ -18,24 +18,33 @@ body {
 }
 
 .carousel-image-1 {
+  /*
   background: url('../img/slider2.0.jpg');
+  */
+  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/slider2.0.jpg');
   background-size: cover;
 }
 
 .carousel-image-2 {
+  /*
   background: url('../img/slider3.0.jpg');
+  */
+  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/slider3.0.jpg');
   background-size: cover;
 }
 
 .carousel-image-3 {
+  /*
   background: url('../img/image1.jpg');
+  */
+  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/slider3.0.jpg');
   background-size: cover;
 }
 
 #home-heading {
   position: relative;
   min-height: 200px;
-  background: url('../img/lights.jpg');
+  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/lights.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
   text-align: center;
@@ -55,7 +64,7 @@ body {
 #video-play {
   position: relative;
   min-height: 200px;
-  background: url('../img/lights.jpg');
+  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/lights.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
   
@@ -73,7 +82,7 @@ body {
 
 #page-header {
   height: 200px;
-  background: url('../img/image1.jpg');
+  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/image1.jpg');
   background-position: 0 -360px;
   background-attachment: fixed;
   color: #fff;
