images added to S3

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
   /*
   background: url('../img/image1.jpg');
   */
-  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/slider3.0.jpg');
+  background: url('https://rajecom.s3.eu-west-2.amazonaws.com/image1.jpg');
   background-size: cover;
 }
 
